	 wii/{Makefile.am,wiidisplay.[ch],wiijoystick.c,wiikeyboard.[ch],
	 wiikeysyms.h,wiimouse.[ch],wiiui.c}},utils.c: merge Wii port to
	 trunk (Bjoern Giesler/Philip Kendall).
20090111 configure.in: Wii: Modified configure script so that USE_JOYSTICK is
	 always defined if Wii ui is used (Marek).
20090111 ui/wii/wiimouse.c: Wii: Made wii remote arrows send joystick key codes
	 instead of cursor key codes to the menu since widget now support
	 joystick a little better. This fixed inability to check the checkboxes
	 in the menu (Marek).
20090112 ui/win32/win32ui.c: Win32: Created a simple Help->About message box
	 (Marek).
20090112 compat/win32/timer.c: Win32: Added missing include (Marek).
20090112 configure.in: Win32: Added missing library link needed by the joystick
	 code (Marek).
20090112 ui/win32/{installer/{Makefile.am,fuse.nsi},Makefile.am}: Win32: Added
	 NSIS (nsis.sf.net) installer script (Marek).
20090112 ui/win32/win32joystick.c: Win32: Small correction to the file's header
	 info (Marek).
20090112 ui/win32/installer/fuse.nsi: Win32: Added information and license to
	 the header of the NSIS installer script (Marek).
20090114 configure.in,ui/win32/{Makefile.am,icons/Makefile.am}: Win32: Fixed
	 autotools scripts so that 'make dist' works properly for win32 ui (Marek).
20090118 ui/wii/wiimouse.c: Wii: Changed menu navigation so that it's navigated
	 using wii remote in horizontal position, consistently to how wii
	 remote is used during emulation (Marek).
20090118 ui/wii/Makefile.am: Wii: Added wiikeysyms.h to the autotools script
	 (Marek).
20090118 compat/wii/paths.c: Wii: Changed the home path location to absolute
	 path, since the relative doesn't seem to work when saving settings
	 (Marek).
20090122 ui/widget/filesel.c: Widget: Fixed potential problem with length of
	 dirent.d_name and made windows version use constant FILENAME_MAX
	 instead of NAME_MAX (Marek).
20090124 ui/widget/menu.c: Widget: Added capability to define joystick buttons
	 (Marek).