@@ -88,6 +88,15 @@ ui_joystick_poll( void )
   if( btnsdown & WPAD_BUTTON_2 )
     POST_JOYPRESS( 0, INPUT_JOYSTICK_FIRE_2 );
 
+  if( btnsdown & WPAD_BUTTON_A )
+    POST_JOYPRESS( 0, INPUT_JOYSTICK_FIRE_3 );
+  if( btnsdown & WPAD_BUTTON_B )
+    POST_JOYPRESS( 0, INPUT_JOYSTICK_FIRE_4 );
+  if( btnsdown & WPAD_BUTTON_PLUS )
+    POST_JOYPRESS( 0, INPUT_JOYSTICK_FIRE_5 );
+  if( btnsdown & WPAD_BUTTON_MINUS )
+    POST_JOYPRESS( 0, INPUT_JOYSTICK_FIRE_6 );
+
   if( btnsup & WPAD_BUTTON_LEFT )
     POST_JOYRELEASE( 0, INPUT_JOYSTICK_DOWN );
   if( btnsup & WPAD_BUTTON_RIGHT )
@@ -101,4 +110,13 @@ ui_joystick_poll( void )
     POST_JOYRELEASE( 0, INPUT_JOYSTICK_FIRE_1 );
   if( btnsup & WPAD_BUTTON_2 )
     POST_JOYRELEASE( 0, INPUT_JOYSTICK_FIRE_2 );
+
+  if( btnsup & WPAD_BUTTON_A )
+    POST_JOYRELEASE( 0, INPUT_JOYSTICK_FIRE_3 );
+  if( btnsup & WPAD_BUTTON_B )
+    POST_JOYRELEASE( 0, INPUT_JOYSTICK_FIRE_4 );
+  if( btnsup & WPAD_BUTTON_PLUS )
+    POST_JOYRELEASE( 0, INPUT_JOYSTICK_FIRE_5 );
+  if( btnsup & WPAD_BUTTON_MINUS )
+    POST_JOYRELEASE( 0, INPUT_JOYSTICK_FIRE_6 );
 }
